# tilia_desktop

./: TESTING.md  pyproject.toml  tilia.nuitka-package.config.yml  tla2json.sh
.github/workflows/: build.yml  run-tests.yml
tests/: conftest.py  test_app.py  test_boot.py  test_export.py
tests/player/: test_player.py
tests/timelines/beat/: test_beat_timeline.py
tests/timelines/pdf/: test_pdf_timeline.py
tests/ui/cli/: test_load_media.py
tests/ui/timelines/: test_timelineui_collection.py
tests/ui/timelines/audiowave/: test_audiowave_ui.py
tests/ui/timelines/beat/: test_beat_timeline_ui.py
tests/ui/timelines/harmony/: test_harmony_timeline_ui.py  test_harmony_ui.py  test_mode_ui.py
tests/ui/timelines/hierarchy/: test_hierarchy_timeline_ui.py  test_hierarchy_ui.py
tests/ui/timelines/marker/: test_marker_timeline_ui.py  test_marker_ui.py
tests/ui/timelines/pdf/: test_pdf_marker_ui.py  test_pdf_timeline_ui.py
tests/ui/windows/: test_manage_timelines.py
tilia/: app.py  boot.py  log.py
tilia/file/: file_manager.py
tilia/media/player/: base.py
tilia/requests/: get.py  post.py
tilia/ui/: player.py  qtui.py
tilia/ui/cli/: ui.py
tilia/ui/timelines/audiowave/: element.py
tilia/ui/timelines/base/: context_menus.py  timeline.py
tilia/ui/timelines/beat/: element.py
tilia/ui/timelines/collection/: collection.py  view.py
tilia/ui/timelines/harmony/elements/: harmony.py  mode.py
tilia/ui/timelines/hierarchy/: element.py  timeline.py
tilia/ui/timelines/marker/: element.py
tilia/ui/timelines/pdf/: element.py  timeline.py
tilia/ui/timelines/score/element/note/: ui.py
tilia/ui/timelines/slider/: timeline.py
tilia/ui/windows/: manage_timelines.py  svg_viewer.py
