[build-system]
requires = [
    "Nuitka",
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "TiLiA"
version = "0.6.1"
description = "A GUI for creating and visualizing annotations over audio and video files."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "chardet<6.0.0",
    "colorama~=0.4.6",
    "httpx~=0.28.1",
    "isodate~=0.7.2",
    "lxml>=5.3.0",
    "music21>=9.1",
    "numpy~=1.26.4",
    "platformdirs>=4.0.0",
    "prettytable>=3.7.0",
    "python-dotenv>=1.0.1",
    "pypdf>=6.0.0",
    "PySide6==6.9.3",  # PySide 6.10.2 has a problem displaying scores (see issue #411)
    "PySide6_Addons==6.9.3",
    "PySide6_Essentials==6.9.3",
    "sentry-sdk>=2.21.0",
    "soundfile~=0.13.1",
    "TiLiA",
    "tomli; python_version < '3.11'"
]

authors = [
    {email = "tilia@tilia-app.com"},
    {name = "Felipe Defensor"},
    {name = "Anne Foo"}
]

[project.scripts]
tilia = "tilia.__main__:main"

[project.urls]
Homepage = "https://tilia-app.com"
Repository = "https://github.com/TimeLineAnnotator/desktop"

[dependency-groups]
build = [
    "build",
    "ImageIO; sys_platform == 'darwin'",
    "Nuitka >= 4.0",
    "ordered-set==4.1.0",
    "pyyaml",
    "setuptools<82.0.0; python_version >= '3.12'", #  setuptools>82.0.0 no longer provides pkg_resources
    "wheel==0.38.4",
    "zstandard==0.20.0"
]
ci-tests = [
    "coverage>=7.0.0",
    "ruff>=0.15.0",
    "pytest-rerunfailures",
    "pytest-timeout",
    "pytest-xdist>=3.0.0",
    {include-group = "testing"},
]
dev = [
    "icecream>=2.1.0",
    "pre-commit",
    {include-group = "testing"},
]
testing = [
    "pytest>=8.0.0",
    "pytest-env>=1.1.5",
]

[tool.coverage.run]
source = ["tilia"]
omit = ["tilia/dev/*"]

[tool.nuitka]
assume-yes-for-downloads = true
enable-plugins = ["pyside6"]
include-qt-plugins = ["multimedia"]
nofollow-import-to = ["*.tests", "*.test"]
noinclude-qt-translations = true
onefile-tempdir-spec = "{CACHE_DIR}/{PRODUCT}/v{VERSION}"
remove-output = true
report = "compilation-report.xml"
user-package-configuration-file = "tilia.nuitka-package.config.yml"
deployment = true
mode = "app"

[tool.pytest.ini_options]
env = [
    "ENVIRONMENT=test",
    "QT_QPA_PLATFORM=offscreen",
]

[tool.ruff]
exclude = ["tilia/dev"]
line-length = 88
lint.ignore = ["E203","E501"]
lint.per-file-ignores = {"__init__.py"=["F401", "I001"]}
lint.extend-select = ["B","I"]
target-version = "py310"

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "build", "build.*",
    "dist",
    "docs", "docs.*",
    "paper", "paper.*",
    "scripts",
    "tests", "tests.*",
    "venv.*", "venv"
]

[tool.setuptools.package-data]
tilia = [
    "../.tilia.env",
    "../tilia.nuitka-package.config.yml", # because we build from sdist
    "../LICENSE",
    "media/player/youtube.html",
    "media/player/youtube.css",
    "parsers/score/svg_maker.html",
    "parsers/score/timewise_to_partwise.xsl",
    "ui/fonts/*",
    "ui/icons/*/index.theme",
    "ui/icons/*/actions/256/*",
    "ui/icons/*/apps/256/*",
]
